use rustls as default, add the optional use_openssl feature
both the rustls and openssl HTTPS proxies have the same API, so it does
not affect much the rest of sozu. Rustls is now the default because it
will be easier to employ as TLS client for backend connections

--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -42,6 +42,7 @@ procinfo = "^0.4.1"
 
 [features]
 unstable = []
+use_openssl = ["sozu-lib/use_openssl"]
 
 [badges]
 travis-ci = { repository = "sozu-proxy/sozu" }
