--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -34,7 +34,7 @@ mio-uds = "^0.6"
 libc = "^0.2"
 slab = "^0.3.0"
 pool = "^0.1"
-openssl = {version="^0.9.5", features= ["v102"]}
+openssl = {version="^0.9.5", features= ["v102"], optional = true}
 rustls = "^0.11"
 hdrsample = "^6.0"
 sozu-command-lib = { version = "^0.4", path = "../command" }
@@ -51,6 +51,7 @@ features = ["v4"]
 default  = []
 splice   = []
 unstable = []
+use_openssl = ["openssl"]
 
 [badges]
 travis-ci = { repository = "sozu-proxy/sozu" }
